# SDRPlusPlusBrown

./: .gitignore  AGENTS-debugging.md  AGENTS.md  CMakeLists.txt  SDRplay_RSP_API-Linux-3.15.2  SDRplay_RSP_API-Linux-3.15.2.run  auto_test.py  make_appimage.sh  make_macos_bundle.sh  make_windows_package.ps1  readme.md  rebuild.sh  sdrplay_license.txt  sdrpp-cli  sdrpp.desktop  sdrpp_module.cmake
.github/workflows/: build_all.yml
android/: gradle.properties
android/app/: build.gradle
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: EmbeddableWebServer.h  command_args.cpp  core.cpp  core.h  http_debug_server.h  http_debug_server_impl.cpp  module.cpp  module.h  options.cpp  server.cpp  version.h
core/src/dsp/: block.h  correction.h  logmmse_nr.h  processing.h  processor.h  resampling.h  routing.h  sink.h  stream.h  wb_nr.h
core/src/dsp/demod/: am.h  (+1 more)
core/src/gui/: colormaps.cpp  file_dialogs.h  main_window.cpp  main_window.h  smgui.cpp  smgui.h  style.cpp  theme_manager.cpp
core/src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp
core/src/signal_path/: dsp.cpp  dsp.h  iq_frontend.cpp  signal_path.cpp  signal_path.h  sink.cpp  sink.h  source.cpp  source.h  tx.cpp  tx.h
core/src/utils/: arrays.cpp  cty.cpp  dsputils.cpp  dsputils.h  flog.cpp  networking.cpp  spectrum_utils.h  strings.h  wav.h  wstr.h
decoder_modules/ch_extravhf_decoder/: CMakeLists.txt  README.md
decoder_modules/ch_extravhf_decoder/src/: main.cpp
decoder_modules/ch_tetra_demodulator/: CMakeLists.txt
decoder_modules/ch_tetra_demodulator/src/: main.cpp
decoder_modules/ch_tetra_demodulator/src/decoder/etsi_codec-patches/: download_and_patch.sh
decoder_modules/ch_tetra_demodulator/src/decoder/src/: tetra_common.c
decoder_modules/ch_tetra_demodulator/src/decoder/src/lower_mac/: tetra_lower_mac.c
decoder_modules/ch_tetra_demodulator/src/decoder/src/phy/: tetra_burst.c  tetra_burst_sync.c  tetra_burst_sync.h
decoder_modules/ch_tetra_demodulator/src/dsp/: bit_unpacker.h  osmotetra_dec.h
decoder_modules/cw_decoder/src/: cwdecoder.cpp  cwdecoder.h
decoder_modules/dawson_cw_decoder/: CMakeLists.txt
decoder_modules/dawson_cw_decoder/src/: cw_classifier.cpp  cw_classifier.h  cw_decoder_core.cpp  cw_decoder_core.h  cw_dsp_engine.cpp  cw_dsp_engine.h  cw_iq_dsp_engine.cpp  cw_iq_dsp_engine.h  fft_processor.cpp  fft_processor.h  main.cpp  morse_data.cpp  morse_data.h
decoder_modules/dsdcc_decoder/: CMakeLists.txt
decoder_modules/falcon9_decoder/: CMakeLists.txt
decoder_modules/falcon9_decoder/src/: main.cpp
decoder_modules/ft8_decoder/: CMakeLists.txt
decoder_modules/ft8_decoder/src/: fftw_mshv_plug.cpp  fftw_mshv_plug.h  fftw_mshv_plug_original.h  main.cpp  sdrpp_ft8_mshv.cpp  sdrpp_ft8_mshv_main.cpp
decoder_modules/m17_decoder/: CMakeLists.txt
decoder_modules/m17_decoder/src/: main.cpp
decoder_modules/meteor_demodulator/: CMakeLists.txt
decoder_modules/meteor_demodulator/src/: main.cpp
decoder_modules/radio/: CMakeLists.txt
decoder_modules/radio/src/: demod.h  radio_interface.h  radio_module.h  radio_module_interface.h  rds.cpp
decoder_modules/weather_sat_decoder/: CMakeLists.txt
docker_builds/appimage/: Dockerfile  make_appimage.sh  make_appimage_aarch64.sh
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_bullseye/: do_build.sh
docker_builds/debian_sid/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_jammy/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
docker_builds/ubuntu_oracular/: do_build.sh
docker_builds/ubuntu_resolute/: Dockerfile  do_build.sh
docs/: debug_protocol.md  index.md  libresdr_usage_zh-TW.md  libresdr_windows_build.md  tx.md
e2e/: AGENTS.md  e2e_common.py  run_all.sh  sdrpp_test_framework.py  test_dawson_cw_decoder.py  test_frequency_manager.py  test_lsb_startup.py  test_radio_modes.py  test_tetra_demodulator.py
go/: build.sh  deploy.sh
macos/: bundle_utils.sh
misc_modules/demo_module/: CMakeLists.txt
misc_modules/discord_integration/: CMakeLists.txt
misc_modules/frequency_manager/: CMakeLists.txt
misc_modules/frequency_manager/src/: main.cpp  scanner.h
misc_modules/recorder/: CMakeLists.txt
misc_modules/rigctl_server/: CMakeLists.txt
misc_modules/scanner/: CMakeLists.txt
misc_modules/scheduler/: CMakeLists.txt
misc_modules/tci_server/: CMakeLists.txt
misc_modules/voice_commands/: CMakeLists.txt
misc_modules/voice_commands/model/: radio_ru_linux_v2_2_0.ppn  sdrppbrown_ru_linux_v2_2_0.rhn
misc_modules/voice_commands/src/: main.cpp  picovoice.h  pv_picovoice.h
related/hl2_proxy/: go.mod
related/pcap_parser/: go.mod  go.sum
sink_modules/audio_sink/: CMakeLists.txt
sink_modules/brown_audio_sink/: CMakeLists.txt
sink_modules/mpeg_adts_sink/: CMakeLists.txt
sink_modules/network_sink/: CMakeLists.txt
sink_modules/new_portaudio_sink/: CMakeLists.txt
sink_modules/null_audio_sink/: CMakeLists.txt
sink_modules/portaudio_sink/: CMakeLists.txt
source_modules/airspy_source/: CMakeLists.txt
source_modules/airspyhf_source/: CMakeLists.txt
source_modules/audio_source/: CMakeLists.txt
source_modules/bladerf_source/: CMakeLists.txt
source_modules/dragonlabs_source/: CMakeLists.txt
source_modules/file_source/: CMakeLists.txt
source_modules/hackrf_source/: CMakeLists.txt
source_modules/hl2_source/: CMakeLists.txt
source_modules/limesdr_source/: CMakeLists.txt
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/rfspace_source/: CMakeLists.txt
source_modules/rtl_sdr_source/: CMakeLists.txt
source_modules/rtl_tcp_source/: CMakeLists.txt
source_modules/sddc_source/: CMakeLists.txt
source_modules/sdrplay_source/: CMakeLists.txt
source_modules/sdrpp_server_source/: CMakeLists.txt
source_modules/soapy_source/: CMakeLists.txt
source_modules/spyserver_source/: CMakeLists.txt
src/: main.cpp
tests/: baseband_file_test.cpp  launch_test.sh  test_runner.h
tools/cw_decoder_app/: CMakeLists.txt  main.cpp
(+87 files in other folders)
